compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_sizing_overflow.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : array 0..16#7FFFFFFF, 0..16#7FFFFFFF of int"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No)), range of `int` (Unevaluated(PackageId(0), BodyId(2)) .. Expr(Unevaluated(PackageId(0), BodyId(3)), No)), ) of int
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 9..52): `array` has too many elements
| error for (FileId(1), 9..52): overflow while computing element count
