compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_zero_static_size.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : array 1..0 of int"
---
"_"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of array ( range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No)), ) of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:15..19: element range is too small
| note for src/main.t:15..19: computed range size is 0
| error for src/main.t:15..19: zero sized ranges cannot be used in `array` types that aren't `flexible`
