compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_assignment_invalid_compound_add.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var lhs : real\nvar rhs : boolean\nlhs += rhs\n"
---
"lhs"@(FileId(1), 4..7) [ConstVar(Var, No)]: real
"rhs"@(FileId(1), 19..22) [ConstVar(Var, No)]: boolean
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 37..39): mismatched types for addition
| note for (FileId(1), 40..43): this is of type `boolean`
| note for (FileId(1), 33..36): this is of type `real`
| error for (FileId(1), 37..39): `real` cannot be added to `boolean`
| info: operands must both be numbers, strings, or sets
