compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_assignment_lhs_not_mut_missing_rhs.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "const j : int := 1\nj := \n"
---
"j"@"src/main.t:6..7" [ConstVar(Const, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:21..23: cannot assign into `j`
| error for src/main.t:19..20: `j` is a reference to a constant, not a variable
| note for src/main.t:6..7: `j` declared here
