compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_assignment_lhs_not_value.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type k : int k := 1"
---
"k"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:15..17: cannot assign into `k`
| error for src/main.t:13..14: `k` is a reference to a type, not a variable
| note for src/main.t:5..6: `k` declared here
