compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_assignment_mismatched_types.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var lhs : int\nlhs := 1 + 1.0\n"
---
"lhs"@(FileId(1), 4..7) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 18..20): mismatched types
| note for (FileId(1), 21..28): this is of type `real`
| note for (FileId(1), 14..17): this is of type `int`
| info: `real` is not assignable into `int`
