compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_assignment_rhs_not_value.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type j : int var k : int k := j"
---
"j"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"k"@(FileId(1), 17..18) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 30..31): cannot use `j` as an expression
| error for (FileId(1), 30..31): `j` is a reference to a type, not a variable
| note for (FileId(1), 5..6): `j` declared here
