compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_assignment_valid.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "const j : int := 2\nvar k : int := 1\nk := j\n"
---
"j"@"src/main.t:6..7" [ConstVar(Const, No)]: int
"k"@"src/main.t:23..24" [ConstVar(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
