compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_bind_decl_from_expr.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "begin\nbind you to false\nend"
---
"you"@(FileId(1), 11..14) [Binding(Const, No)]: boolean
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 11..23: cannot bind `you` to expression
| error in file FileId(1) for 18..23: not a reference to a variable
