compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_bind_decl_from_register.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "begin\nconst register reg := 1\nbind you to reg, var me to reg\nend\n"
---
"reg"@"src/main.t:21..24" [ConstVar(Const, Yes)]: int
"you"@"src/main.t:35..38" [Binding(Const, No)]: int
"me"@"src/main.t:51..53" [Binding(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:35..45: cannot bind `you` to `reg`
| error for src/main.t:42..45: `reg` is a reference to a constant register, not a variable
| note for src/main.t:21..24: `reg` declared here
| info: registers don't have a location in memory, so they cannot be bound to
error at src/main.t:47..60: cannot bind `me` to `reg`
| error for src/main.t:57..60: `reg` is a reference to a constant register, not a variable
| note for src/main.t:21..24: `reg` declared here
| info: registers don't have a location in memory, so they cannot be bound to
